--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,7 +2,7 @@ Package: plateau
 Title: Fit plateau climate envelopes in species distribution models for presence/absence data
 Version: 0.1.1
 Authors@R: "Mark J Brewer <mark.brewer@bioss.ac.uk> [aut, cre]"
-Description: What the package does (one paragraph)
+Description: Fit plateau climate envelopes in species distribution models for presence/absence data
 Depends: R2WinBUGS, mgcv
 License: GPL-2 | GPL-3
 LazyData: true
