--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,3 +8,6 @@ export(generate.initial.values)
 export(glm.env.fn)
 export(map.plot)
 export(write.bugs.model)
+import(R2WinBUGS)
+import(mapproj)
+import(mgcv)
