New R version? New ImportFrom shenanigans!

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -11,3 +11,25 @@ export(write.bugs.model)
 import(R2WinBUGS)
 import(mapproj)
 import(mgcv)
+importFrom(grDevices,dev.off)
+importFrom(grDevices,grey)
+importFrom(grDevices,palette)
+importFrom(grDevices,pdf)
+importFrom(grDevices,trans3d)
+importFrom(graphics,contour)
+importFrom(graphics,legend)
+importFrom(graphics,par)
+importFrom(graphics,persp)
+importFrom(graphics,plot)
+importFrom(graphics,points)
+importFrom(graphics,text)
+importFrom(stats,as.formula)
+importFrom(stats,binomial)
+importFrom(stats,coef)
+importFrom(stats,cor)
+importFrom(stats,glm)
+importFrom(stats,lm)
+importFrom(stats,optim)
+importFrom(stats,predict)
+importFrom(stats,rnorm)
+importFrom(stats,runif)
