Included Xiao Feng's Predict Function

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,6 +2,7 @@
 
 export(env.fn)
 export(envelope.plot)
+export(envelope.predict)
 export(fit.bugs.env)
 export(fit.bugs.nospatial.env)
 export(fit.glm.env)
