--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,8 +1,10 @@
 Package: plateau
 Title: Fit plateau climate envelopes in species distribution models for
     presence/absence data
-Version: 0.4.1
-Authors@R: "Mark J Brewer <mark.brewer@bioss.ac.uk> [aut, cre]"
+Version: 0.4.2
+Authors@R: c(
+    person("Mark J","Brewer",email="mark.brewer@bioss.ac.uk",role="cre"),
+    person("Xiao","Feng",email="xiao.feng@okstate.edu",role="ctb"))
 Description: Fit plateau climate envelopes in species distribution models for
     presence/absence data.
 Depends:
